Prevented the tweets from overflowing off the page

--- a/linkerd.io/themes/buoyant/assets/bulma/sass/grid/columns.sass
+++ b/linkerd.io/themes/buoyant/assets/bulma/sass/grid/columns.sass
@@ -8,6 +8,7 @@ $column-gap: 0.75rem !default
   padding: $column-gap
   .columns.is-mobile > &.is-narrow
     flex: none
+    max-width: 91.66666667%
   .columns.is-mobile > &.is-full
     flex: none
     width: 100%
